kctl/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-backend
  namespace: livingdocs-develop
spec:
  podSelector:
    matchLabels:
      app: bluewin
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bluewin
          tier: frontend
